--- a/aria-usage.css
+++ b/aria-usage.css
@@ -19,10 +19,13 @@ h1 {
 
 pre {
 	color: #000; 
-	background: #ccc; 
+	background: #D9D9D9; 
 	border: 3px double #6c0000; 
 	padding: 0.5em;
 	overflow-x: auto;
+	white-space: pre-wrap;       /* css-3 */
+        white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+        word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
 a {
